--- a/doc/Doxyfile_common.in
+++ b/doc/Doxyfile_common.in
@@ -203,6 +203,8 @@ ALIASES                += inherits{1}="@xmlonly<inherits from=\"\1\"/>@endxmlonl
 ALIASES                += depends{1}="@xmlonly<depends from=\"\1\"/>@endxmlonly \1"
 # In order to list the groups of a header file
 ALIASES                += listgroup{1}="@xmlonly<ingroup>@endxmlonly @ref \1 @xmlonly</ingroup>@endxmlonly"
+# To add object properties
+ALIASES                += prop{1}="@xmlonly<prop name=\"\1\"/>@endxmlonly \1"
 
 # This tag can be used to specify a number of word-keyword mappings (TCL only).
 # A mapping has the form "name=value". For example adding
