--- a/doc/Doxyfile_common.in
+++ b/doc/Doxyfile_common.in
@@ -219,6 +219,10 @@ ALIASES                += ender_prop_downcast="@xmlonly<ender-prop-downcast/>@en
 ALIASES                += ender_name{1}="@xmlonly<ender-name name=\"\1\"/>@endxmlonly"
 # To define an arg nullable
 ALIASES                += ender_nullable="@xmlonly<ender-nullable/>@endxmlonly [Nullable]"
+# To define a callback arg as immediate
+ALIASES                += ender_immediate="@xmlonly<ender-immediate/>@endxmlonly [Immediate callback]"
+# To define a callback arg as delayed
+ALIASES                += ender_delayed="@xmlonly<ender-delayed/>@endxmlonly [Delayed callback]"
 
 # This tag can be used to specify a number of word-keyword mappings (TCL only).
 # A mapping has the form "name=value". For example adding
