--- a/doc/Doxyfile_common.in
+++ b/doc/Doxyfile_common.in
@@ -214,7 +214,7 @@ ALIASES                += ender_type{1}="@xmlonly<ender-type type=\"\1\"/>@endxm
 # Like list group but only generate the proto of the type, not the functions, methods, etc
 ALIASES                += ender_group_proto{1}="@xmlonly<ender-group-proto>@endxmlonly @ref \1 @xmlonly</ender-group-proto>@endxmlonly"
 # To make it a downcast prop
-ALIASES                += ender_prop_downcast="@xmlonly<ender-prop-downcast/>@endxmlonly"
+ALIASES                += ender_downcast="@xmlonly<ender-downcast/>@endxmlonly"
 # To define a name of the item
 ALIASES                += ender_name{1}="@xmlonly<ender-name name=\"\1\"/>@endxmlonly"
 # To define an arg nullable
